# swifttalk-server

./: .clang-format  CMakeLists.txt  README.md  build.sh
include/: client_session.hpp  connection.hpp  message.hpp  server.hpp  thread_safe_queue.hpp
sources/: client_session.cpp  connection.cpp  main.cpp  server.cpp
